# img-voronoi

./: CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  scrns.config.ts  tsconfig.json  vite.config.ts
.dvc/: config
.github/workflows/: deploy.yml
cli/: Cargo.toml
cli/voronoi-cli/: Cargo.toml
cli/voronoi-cli/src/: main.rs
cli/voronoi-cli/tests/: .gitignore  determinism.rs  fixtures.dvc
cli/voronoi-cli/tests/fixtures/: aurora.jpg.dvc  aurora_200sites_cpu.png.dvc  aurora_200sites_gpu.png.dvc  aurora_500sites.png.dvc  cityscape.jpg.dvc  cityscape_200sites.png.dvc  cityscape_500sites.png.dvc  flowers.jpg.dvc  flowers_200sites_cpu.png.dvc  flowers_200sites_gpu.png.dvc  flowers_500sites.png.dvc  sample.jpg.dvc  sample_1000sites_seed0.png.dvc  sample_100sites_seed0.png.dvc  sample_100sites_seed42.png.dvc  sample_500sites_seed0.png.dvc  sample_500sites_seed123.png.dvc
cli/voronoi-core/: Cargo.toml
cli/voronoi-core/src/: cpu.rs  gpu.rs  lib.rs  site.rs  voronoi.rs
cli/voronoi-wasm/: Cargo.toml
cli/voronoi-wasm/src/: lib.rs
public/: CNAME  benchmark.html
specs/: future-optimizations.md
src/: App.tsx  index.css  vite-env.d.ts
src/components/: ControlPanel.css  ControlPanel.tsx  ImageGallery.css  ImageGallery.tsx  ImageVoronoi.css  ImageVoronoi.tsx  PicsumBrowser.css  PicsumBrowser.tsx  groupRenderers.tsx
src/storage/: ImageStorage.ts
src/types/: sobel.d.ts  voronoi.d.ts
src/utils/: random.ts
src/voronoi/: ChoosePoints.ts  VoronoiDrawer.ts  VoronoiWasm.ts  VoronoiWebGL.ts  benchmark.ts
