[package]
name = "voronoi-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core Voronoi diagram computation library"

[features]
default = ["cpu"]
cpu = ["rayon"]
gpu = ["wgpu", "pollster", "bytemuck"]

[dependencies]
# Core
image = "0.25"
thiserror = "2"
rand = "0.8"

# CPU parallelism
rayon = { version = "1.10", optional = true }

# GPU compute
wgpu = { version = "23", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1.19", features = ["derive"], optional = true }

# [dev-dependencies]
# criterion = "0.5"

# [[bench]]
# name = "voronoi_bench"
# harness = false
