[package]
name = "voronoi-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for Voronoi computation"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
voronoi-core = { path = "../voronoi-core", default-features = false, features = ["cpu"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
image = "0.25"
getrandom = { version = "0.2", features = ["js"] }
